<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/success_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/baseColor"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dialog_success_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/success_msg"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </LinearLayout>

    <Button
        android:id="@+id/dialog_success_downBtn"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="7dp"
        android:text="@string/down"
        android:textColor="@color/baseColor" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="7dp" />

</LinearLayout>